@@ -7,6 +7,7 @@ Core - General
   - Minor changes and fixes to prevent warnings/notices in CLI based scripts
   - Improvements to the {browser_lang} plugin.
   - Fixes a bug in the CmsLayoutTemplateQuery class.
+  - Fixes a bug with the name= parameter in the {cms_stylesheet} plugin.
 
 MicroTiny v2.2.3
   - More entropy in the mt_config.js filename to fix issues with js caching when switching users.
